--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -201,7 +201,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which one(s) of the variables are nearly normally distributed? How do you know?"
+    "Which one(s) of the variables look/are nearly normally distributed? (only by looking at them)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your answer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# BONUS\n",
+    "Find a method to test it"
    ]
   },
   {
