--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +812,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# When the standard deviation is lower the range of numbers is more narrow"
+    "# If the mean is higher the range of number will be wider"
    ]
   },
   {
@@ -828,22 +828,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9999996619256516"
+       "0.7768698398515702"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "time_bank = expon(1/10)\n",
+    "time_bank = expon(scale=10)\n",
     "p_less_15 = time_bank.cdf(15)\n",
     "p_less_15"
    ]
@@ -857,16 +857,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.3807434840493755e-07"
+       "0.2231301601484298"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
